# decel

./: README.md  pyproject.toml  sample_config.dcfg
source/: configfile.py  key_command.py  main.py  sample_config.dcfg
source/data/: dependency_tree.py  formula.py  script_loader.py  stocks.py  table_data.py
source/data/test/: formula_test.py
source/view/: input.py  keys.py  mainwindow.py  popup.py  sheet_window.py  utils.py  window.py
source/view/utils/: general.py  input.py  keys.py
