[build-system]
name = "decel"
# Minimum requirements for the build system to execute.
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
decel = "source.main:main"

[tool.poetry]
name = "decel"
authors = [
    "Jim Blim <fake_email@nice_try.net>"
    ]
version = "0.0.1"
description = "Simple python-based spreadsheet manager"


packages = [
 { include = "source" },
]


