[build-system]
name = "decel"
# Minimum requirements for the build system to execute.
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "decel"
authors = [
    "Jim Blim <fake_email@nice_try.net>"
    ]
version = "0.0.1"
description = "Simple python-based spreadsheet manager"


packages = [
 { include = "source" },
]


[tool.poetry.scripts]
decel = "source.main:main"
