[tool.poetry]
name = "decel"
version = "0.1.0"
description = "A simple terminal spreadsheet editor"
authors = ["Decel <decel69@protonmail.com>"]
packages = [
    { include = "source" },
    ]


[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
requests = "^2.27.1"
pandas = "^1.4.0"
yfinance = "^0.1.70"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
